new `jdk` command, more flexible than previous alises