@@ -7,10 +7,7 @@ export EDITOR=vi
 export CLICOLOR=1
 export LSCOLORS="ExGxBxDxCxEgEdxbxgxcxd"
 
-export POSTGRES_APP=/Applications/Postgres93.app/Contents/MacOS
-export JAVA_OPTS="-Xms256m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m"
-export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=256m"
-export JAVA_HOME=$(/usr/libexec/java_home)
 export ANDROID_HOME=/usr/local/opt/android-sdk
+export POSTGRES_APP=/Applications/Postgres93.app/Contents/MacOS
 
 export PATH=~/bin:/usr/local/bin:$POSTGRES_APP/bin:$PATH
